# Library-Management-System

./: README.md  pyproject.toml
app/: __init__.py  categories.py  main.py
app/queries/: borrow_books.edgeql  borrow_books_async_edgeql.py  create_books.edgeql  create_books_async_edgeql.py  create_category.edgeql  create_category_async_edgeql.py  create_user.edgeql  create_user_async_edgeql.py  get_all_categories.edgeql  get_all_categories_async_edgeql.py  get_book_by_id.edgeql  get_book_by_id_async_edgeql.py  get_books_by_category.edgeql  get_books_by_category_async_edgeql.py  list_categories_async_edgeql.py
dbschema/: default.esdl
dbschema/migrations/: 00001-m17s2ts.edgeql  00002-m1hxkeq.edgeql  00003-m1enqsd.edgeql  00004-m12alk7.edgeql
scripts/: index.html
